crates/engine/src/parser/snapshots/engine__parser__oracle_trigger__snapshot_tests__trigger_optional_you_may.snap
---
source: crates/engine/src/parser/oracle_trigger.rs
expression: def
---
{
  "mode": "ChangesZone",
  "execute": {
    "kind": "Spell",
    "effect": {
      "type": "Draw",
      "count": {
        "type": "Fixed",
        "value": 1
      },
      "target": {
        "type": "Controller"
      }
    },
    "cost": null,
    "sub_ability": null,
    "duration": null,
    "description": null,
    "target_prompt": null,
    "condition": null,
    "optional_targeting": false,
    "optional": true,
    "forward_result": false
  },
  "valid_card": {
    "type": "SelfRef"
  },
  "origin": null,
  "destination": "Battlefield",
  "trigger_zones": [
    "Battlefield"
  ],
  "phase": null,
  "optional": true,
  "damage_kind": "Any",
  "secondary": false,
  "valid_target": null,
  "valid_source": null,
  "description": "When Test Card enters the battlefield, you may draw a card.",
  "constraint": null,
  "condition": null,
  "batched": false
}
